# bytewords-cli

./: build-deb.py  build.sh  configure  configure.ac
debian/: README.Debian  README.source  control  rules
src/: Makefile.in  config.h.in  params.cpp  utils.cpp
